--- a/Ankand/Views/Produkti/Index.cshtml
+++ b/Ankand/Views/Produkti/Index.cshtml
@@ -15,7 +15,7 @@
                             <p class="card-text">
                                 <h5 class="card-title">
                                     @item.Name
-                                    <a class="text-white float-right" asp-action="Delete" asp-route-id="@item.ID"><i class="bi bi-trash"></i></a>
+                                    <a class="text-white float-right" asp-action="Delete1" asp-route-id="@item.ID"><i class="bi bi-trash"></i></a>
                                 </h5>
                             </p>
                         </div>
@@ -23,6 +23,9 @@
                     <div class="col-md-6">
                         <img src="@item.ImageURL" width=100% alt="@item.Name">
                     </div>
+
+
+
                     <div class="col-md-6">
                         <dic class="card-body">
                             <p class="card-text"><b>Name: </b>@item.Name</p>
