--- a/Ankand/Views/Produkti/AddOfert.cshtml
+++ b/Ankand/Views/Produkti/AddOfert.cshtml
@@ -2,7 +2,7 @@
 
 
 @{
-    ViewData["Tittle"] = "Add a ofert";
+    ViewData["Tittle"] = "Add an ofert";
 }
 <div class="row">
     <div class="col-md-8 offset-2">
@@ -18,7 +18,7 @@
                     <div class="card-footer">
                         <p class="card-text">
                             <a class="btn btn-outline-primary float-right" asp-action="Index"> Back</a>
-                            <input type="submit" value="AddComent" class="btn btn-outline-success float-right" />
+                            <input type="submit" value="AddOfert" class="btn btn-outline-success float-right" />
                         </p>
                     </div>
 
