--- a/Ankand/Views/Shared/_Layout.cshtml
+++ b/Ankand/Views/Shared/_Layout.cshtml
@@ -12,21 +12,21 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                @if (User.Identity.IsAuthenticated)
-                {
+        
+               @* @if (User.Identity.IsAuthenticated)
+                {*@
                     <a class="navbar-brand" asp-area="" asp-controller="Produkti" asp-action="Index">Ankand</a>
-                    <div style="position: fixed;">
-                        <a asp-controller="Produkti" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i>Add Product</a>
-                    </div>
-                }
+                    <a class="navbar-brand" asp-area="" asp-controller="Produkti" asp-action="IndexBid">My Bids</a>
+                    <a asp-controller="Produkti" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i>Add Product</a>
+                    
+               @* }
                 else
-                {
-                    <a class="navbar-brand" href="/Account/Login">Ankand</a>
-                }
+                {*@
+                   @* <a class="navbar-brand" href="/Account/Login">Ankand</a>*@
+               @* }*@
 
                 <partial name="_Identity.cshtml" />
-            </div>
+          
         </nav>
 @*
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
