--- a/Ankand/Views/Produkti/Create.cshtml
+++ b/Ankand/Views/Produkti/Create.cshtml
@@ -32,6 +32,11 @@
                     <input asp-for="Description" class="form-control" />
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
+                    <div class="form-group">
+                        <label asp-for="Price" class="control-label"></label>
+                        <input asp-for="Price" type="number" class="form-control" />
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
                 <div class="form-group">
                         <label asp-fpr="StartDate" class="control-label">Start Date</label>
                         <input asp-for="StartDate" type="date"  class="form-control" />
