--- a/Ankand/Views/Produkti/Delete.cshtml
+++ b/Ankand/Views/Produkti/Delete.cshtml
@@ -27,6 +27,16 @@
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
+                        <label asp-for="Price" class="control-label"></label>
+                        <input asp-for="Price" type="number" class="form-control" />
+                        <span asp-validation-for="Price" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-fpr="EndDate" class="control-label">End Date</label>
+                        <input asp-for="EndDate" type="date" class="form-control" />
+                        <span asp-validation-for="EndDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
                         <form asp-action="Delete">
                             <input type="hidden" asp-for="ID" />
                             <input type="submit" value="Confirm" class="btn btn-danger float-left" />
