--- a/Ankand/Views/Produkti/Details.cshtml
+++ b/Ankand/Views/Produkti/Details.cshtml
@@ -50,6 +50,15 @@
                                                         </form>
                                                     }
                                                 </p>
+                                                @if (Model.Produkti.Oferta.First() == coment)
+                                                {
+                                                    <p class="card-text">
+                                                        <a class="btn btn-success text-white"
+                                                           asp-controller="Orders" asp-action="AddItemToShoppingCart" asp-route-id="@coment.ID">
+                                                            <i class="bi bi-cart-plus"></i> Add to Cart (Price @coment.OfertaPrice.ToString("c"))
+                                                        </a>
+                                                    </p>
+                                                }
                                             </div>
                                         }
                                     }
