--- a/Ankand/Views/Produkti/IndexBid.cshtml
+++ b/Ankand/Views/Produkti/IndexBid.cshtml
@@ -26,6 +26,7 @@
                         <dic class="card-body">
                             <p class="card-text"><b>Name: </b>@item.Name</p>
                             <p class="card-text"><b>Description: </b>@item.Description</p>
+                            <p class="card-text"><b>Price: </b>@item.Price.ToString("c")</p>
                             <p class="card-text"><b>Created On: </b>@item.StartDate.ToString("dd MMM yy")</p>
                             <p class="card-text"><b>End Date: </b>@item.EndDate.ToString("dd MMM yy")</p>
                            @* @{
