--- a/Ankand/Views/Produkti/WalletBalance.cshtml
+++ b/Ankand/Views/Produkti/WalletBalance.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="row">
     <div class="col-md-6 offset-3 alert alert-success text-center">
-        <h2>You don't have enough mony to make this bid!</h2>
+        <h2>Your Wallet Balance is: @ViewBag.WalletBalance.ToString("c") </h2>
         <hr />
         <p>Thank you!</p>
     </div>
