--- a/Ankand/Views/Produkti/Index.cshtml
+++ b/Ankand/Views/Produkti/Index.cshtml
@@ -30,20 +30,14 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text"><b>Name: </b>@item.Name</p>
+                            <a class="navbar-link" asp-action="Details" asp-route-id="@item.ID" style="text-decoration: underline; color: dodgerblue;"><i class=""></i><b>Name: </b>@item.Name</a>
                             <p class="card-text"><b>Description: </b>@item.Description</p>
                             <p class="card-text"><b>Price: </b>@item.Price.ToString("c")</p>
                             <p class="card-text"><b>Created On: </b>@item.StartDate.ToString("dd MMM yy")</p>
                             <p class="card-text"><b>End Date: </b>@item.EndDate.ToString("dd MMM yy")</p>
                         </div>
                     </div>
-                    <div class="col-md-12">
-                        <div class="card-footer">
-                            <p class="card-text">
-                                <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.ID"><i class="bi bi-eye-fill"></i> Details</a>
-                            </p>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
         </div>
